# ESP32ModPlayer

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  table.txt
StdC/: ModPlayerToStdC  ModPlayerToStdC.c  approach.h  vol_table.h
components/dac_audio/: dac_audio.c
components/dac_audio/include/: dac_audio.h
components/dac_audio/test/: CMakeLists.txt  dac_audio_test.c  wave_1ch_16bits.c  wave_1ch_8bits.c  wave_2ch_16bits.c  wave_2ch_8bits.c
components/ssd1306/: CMakeLists.txt  Kconfig.projbuild  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c.c  ssd1306_spi.c
components/u8g2/: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  ChangeLog  LICENSE  README.md  SConscript  component.mk
components/u8g2/cppsrc/: MUIU8g2.h  U8g2lib.cpp  U8g2lib.h  U8x8lib.cpp  U8x8lib.h
extratools/: 8bit.h  8bit.mod  EFXTEST.bak  EFXTEST.mod  EFXTEST.mod.AutoSave.20240322.180546.mod  EFXTEST.mod.AutoSave.20240323.001943.mod  Module1.mod  PRODIGY - Junglelism.mod  R2R.mod.AutoSave.20240315.234742.mod  amiga.c  amiga.h  amiga.mod  approach.mod  byte_tool.py  d-zire_-_native_cry.mod  justice_96_remix.mod  kg.c  laamaa_-_saint_lager.mod  output.c  pulse_of_life_xl.mod  samp_tool.py  schmid-67-summer_heat.mod  secret_of_a_pyramid.mod  wave_table.py
main/: CMakeLists.txt  CMakeLists.txt.bak  EFXTEST.h  amiga.h  d-zire_-_native_cry.h  justice_96_remix.h  keypad.c  keypad.h  laamaa_-_saint_lager.h  long.h  main.c  pschmid-67-summer_heat.h  pulse_of_life_xl.h  samp.c  samp.h  saw_table.h  scurry.h  secret_of_a_pyramid.h  space_debris.h  tracker_data1.h
(+1138 files in other folders)
